https://jira.fingo.info/browse/PRAK-45 New Java features in package reports